deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2000
  namespace: p2000
spec:
  selector: { app: p2000 }
  ports:
    - port: 80
      targetPort: 3000
